--- a/index.html
+++ b/index.html
@@ -1,48 +1,168 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!--?xml version="1.0" encoding="UTF-8"?-->
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <meta name="description" content="Simple Template #5 from
+    <meta name="description" content="Simple Template #3 from
       simpletemplates.org">
-    <meta name="keywords" content="simple #5, template,
+    <meta name="keywords" content="simple #3, template,
       simpletemplates.org">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>Simple Template #5 - simpletemplates.org</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Simple Template #3 - simpletemplates.org</title>
   </head>
   <body>
     <div id="wrap">
-      <h3><font color="#000099"><i>Rossi Maria Evelina</i></font></h3>
-      <h3><i></i><img src="images/genova-dal-mare.jpg" alt=""
-          height="141" width="550"><br>
-      </h3>
-      <div id="nav">
+      <div id="header">
+        <h4><br>
+        </h4>
+        <h4><br>
+        </h4>
+        <h4><font face="Arial Narrow" size="+3"><i>Rossi Maria Evelina</i><i>&nbsp;
+
+
+
+
+            </i> </font></h4>
+        <h4>&nbsp;&nbsp;<img src="minilogo.gif" alt="" align="top"
+            width="111" height="25">&nbsp;&nbsp;&nbsp;&nbsp; <font
+            size="+2">Università&nbsp; di Genova</font> </h4>
+      </div>
+      <div id="menu">
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="vita5.html">Curriculum</a></li>
-          <li><a href="#">Research</a> <a href="#">Teaching</a> <a
-              href="#">Activities</a> <a href="#">Students</a> </li>
+          <li><a href="http://www.dima.unige.it/%7Erossim/index.html">Home</a></li>
+          <li><a
+              href="http://www.dima.unige.it/%7Erossim/Curriculum.html">Curriculum</a></li>
+          <li><a href="http://www.dima.unige.it/%7Erossim/Research.html">Research</a></li>
+          <li><a href="http://www.dima.unige.it/%7Erossim/Teaching.html">Teaching</a></li>
+          <li><a href="#">Contact Us <br>
+            </a>
+            <ul>
+              <li><br>
+              </li>
+              <li><br>
+              </li>
+            </ul>
+          </li>
         </ul>
       </div>
-      <div id="content"><i><br>
+      <div id="content"> <br>
+        <img style="margin: 0 20px 20px 0; float: left; margin: 0 20px 0
+          0;" src="rossim4.jpg" alt="" width="341" height="256"><br>
+        <h6 style="margin: 0px; font-style: normal; font-variant-caps:
+          normal; font-weight: bold; font-size: 12px; line-height:
+          normal; font-family: Verdana, Geneva, Arial, Helvetica,
+          sans-serif; color: rgb(0, 68, 119); letter-spacing: normal;
+          orphans: auto; text-align: -webkit-left; text-indent: 0px;
+          text-transform: none; white-space: normal; widows: auto;
+          word-spacing: 0px; -webkit-text-size-adjust: auto;
+          -webkit-text-stroke-width: 0px;"><br
+            class="Apple-interchange-newline">
+          Present Position:</h6>
+        <p style="margin: 0px; font-style: normal; font-variant-caps:
+          normal; font-weight: normal; font-size: 12px; line-height:
+          normal; font-family: Verdana, Geneva, Arial, Helvetica,
+          sans-serif; color: rgb(0, 68, 119); letter-spacing: normal;
+          orphans: auto; text-align: -webkit-left; text-indent: 0px;
+          text-transform: none; white-space: normal; widows: auto;
+          word-spacing: 0px; -webkit-text-size-adjust: auto;
+          -webkit-text-stroke-width: 0px;">Professor in Geometry<span
+            class="Apple-converted-space"></span><br>
+          <a href="http://www.dima.unige.it/" style="color: rgb(0, 119,
+            170); text-decoration: none;">Department of Mathematics</a>,
+          University of Genova.<br>
           <br>
-        </i> <img src="images/P8160209.jpg" alt="" class="fancy left"
-          height="187" align="top" width="250">
-        <p>ciao<br>
+          <br>
         </p>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-          Fusce quis mauris non risus pharetra viverra. Aliquam id enim
-          id lacus condimentum tempus. Phasellus at mi. Phasellus
-          egestas malesuada arcu. Nam pretium hendrerit leo. Nulla quam.
-          Mauris fringilla. Etiam tristique nulla vel metus. Maecenas
-          semper condimentum lacus. Proin vulputate. Suspendisse
-          potenti. Proin sem mauris, suscipit eleifend, suscipit vel,
-          consectetuer bibendum, odio.</p>
-        <div> <br>
+        <h6 style="margin: 0px; font-style: normal; font-variant-caps:
+          normal; font-weight: bold; font-size: 12px; line-height:
+          normal; font-family: Verdana, Geneva, Arial, Helvetica,
+          sans-serif; color: rgb(0, 68, 119); letter-spacing: normal;
+          orphans: auto; text-align: -webkit-left; text-indent: 0px;
+          text-transform: none; white-space: normal; widows: auto;
+          word-spacing: 0px; -webkit-text-size-adjust: auto;
+          -webkit-text-stroke-width: 0px;">Work address:</h6>
+        <p style="margin: 0px; font-style: normal; font-variant-caps:
+          normal; font-weight: normal; font-size: 12px; line-height:
+          normal; font-family: Verdana, Geneva, Arial, Helvetica,
+          sans-serif; color: rgb(0, 68, 119); letter-spacing: normal;
+          orphans: auto; text-align: -webkit-left; text-indent: 0px;
+          text-transform: none; white-space: normal; widows: auto;
+          word-spacing: 0px; -webkit-text-size-adjust: auto;
+          -webkit-text-stroke-width: 0px;">Department of Mathematics<br>
+          University of Genova<br>
+          via Dodecaneso, 35<br>
+          I-16146 Genova, Italy<br>
+          <br>
+          email:<span class="Apple-converted-space"> </span><a
+            href="mailto:rossim@dima.unige.it" style="color: rgb(0, 119,
+            170); text-decoration: none;">rossim(at)dima.unige.it</a><br>
+          Room: 948<span class="Apple-converted-space"> </span><br>
+          Phone: +39 010 353 6948<span class="Apple-converted-space"><br>
+          </span></p>
+        <p style="margin: 0px; font-style: normal; font-variant-caps:
+          normal; font-weight: normal; font-size: 12px; line-height:
+          normal; font-family: Verdana, Geneva, Arial, Helvetica,
+          sans-serif; color: rgb(0, 68, 119); letter-spacing: normal;
+          orphans: auto; text-align: -webkit-left; text-indent: 0px;
+          text-transform: none; white-space: normal; widows: auto;
+          word-spacing: 0px; -webkit-text-size-adjust: auto;
+          -webkit-text-stroke-width: 0px;"><span
+            class="Apple-converted-space"><br>
+            <b><br>
+              Research Interests:&nbsp;</b></span></p>
+        <p style="margin: 0px; font-style: normal; font-variant-caps:
+          normal; font-weight: normal; font-size: 12px; line-height:
+          normal; font-family: Verdana, Geneva, Arial, Helvetica,
+          sans-serif; color: rgb(0, 68, 119); letter-spacing: normal;
+          orphans: auto; text-align: -webkit-left; text-indent: 0px;
+          text-transform: none; white-space: normal; widows: auto;
+          word-spacing: 0px; -webkit-text-size-adjust: auto;
+          -webkit-text-stroke-width: 0px;"><span
+            class="Apple-converted-space"><i>Primary</i>:&nbsp;
+            Commutative Algebra&nbsp;&nbsp; <br>
+            <i>Secondary</i>: Algebraic Geometry, Homological Algebra
+            and Computational Algebra <br>
+          </span></p>
+        <div class="clear"> </div>
+        &nbsp; <font color="#000099">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <br>
+        </font>
+        <h4> </h4>
+        <a href="file:///Users/rossi/Desktop/simple3/index.html#"></a>
+        <div id="menu">
+          <ul>
+            <li> Links </li>
+          </ul>
+          <font size="+2">Links</font> </div>
+        <div id="content"> </div>
+        <ul>
+          <li><font face="Arial" size="-1"><a
+                href="http://commalge.tumblr.com/">Commutative Algebra
+                in Genova</a>. Here you find the activities of the
+              commutative algebra group of Genova<font color="#000099">
+                <font color="#000000">and</font> </font>the upcoming<span
+                class="Apple-converted-space">&nbsp;</span><span
+                style="font-style: italic;">Algebra/Geometry seminars</span><span
+                class="Apple-converted-space">&nbsp;</span>to be held in
+              our department.</font> </li>
+          <li><font face="Arial" size="-1">My<a
+href="https://arxiv.org/find/all/1/all:+AND+Rossi+AND+Maria+Evelina/0/1/0/all/0/1"><span
+                  class="Apple-converted-space">&nbsp;</span>arXiv.</a></font></li>
+          <li><font face="Arial" size="-1">My<span
+                class="Apple-converted-space">&nbsp;</span><a
+href="http://ams.mpim-bonn.mpg.de/mathscinet/search/publications.html?pg1=INDI&amp;s1=150830">Mathscinet</a>.</font></li>
+          <li><a href="http://www.commalg.org/"><font face="Arial"
+                size="-1">The Commutative Algebra community.</font></a></li>
+        </ul>
+      </div>
+      <div id="footer">
+        <div class="left"> Copyright © Year by <a href="#">Your Website</a>
         </div>
+        <div class="right">
+          <!-- Please consider leaving the credit - link back to our website in the footer intact or if you want to remove it please buy link back free license on http://www.simpletemplates.org/simple-website-template-3.html
+-->Design by <a href="http://www.simpletemplates.org">Simple Website
+            Templates</a> </div>
+        <div class="clear"> </div>
       </div>
     </div>
-    <div style="text-align: center;" id="footer"> © 2013 Your website /
-      Designed by <a href="http://simpletemplates.org/">Simple Website
-        Templates</a><span style="text-decoration: underline;"> </span></div>
   </body>
 </html>
