--- a/Teaching.html
+++ b/Teaching.html
@@ -24,11 +24,11 @@
       </div>
       <div id="menu">
         <ul>
-          <li><a href="http://www.dima.unige.it/%7Erossim/index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a
-              href="http://www.dima.unige.it/%7Erossim/Curriculum.html">Curriculum</a></li>
-          <li><a href="http://www.dima.unige.it/%7Erossim/Research.html">Research</a></li>
-          <li><a href="http://www.dima.unige.it/%7Erossim/Teaching.html">Teaching</a></li>
+              href="Curriculum.html">Curriculum</a></li>
+          <li><a href="Research.html">Research</a></li>
+          <li><a href="Teaching.html">Teaching</a></li>
           <li><a href="#">Contact Us <br>
             </a>
             <ul>
