--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
       <div id="menu">
         <ul>
-          <li><a href="http://me-rossi.github.io/mer/">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a
               href="Curriculum.html">Curriculum</a></li>
           <li><a href="Research.html">Research</a></li>
