--- a/index.html
+++ b/index.html
@@ -34,15 +34,7 @@
               href="Curriculum.html">Curriculum</a></li>
           <li><a href="Research.html">Research</a></li>
           <li><a href="Teaching.html">Teaching</a></li>
-          <li><a href="#">Contact Us <br>
-            </a>
-            <ul>
-              <li><br>
-              </li>
-              <li><br>
-              </li>
-            </ul>
-          </li>
+          <li><a href="#">Contact Us <br></a></li>
         </ul>
       </div>
       <div id="content"> <br>
@@ -65,7 +57,7 @@
           orphans: auto; text-align: -webkit-left; text-indent: 0px;
           text-transform: none; white-space: normal; widows: auto;
           word-spacing: 0px; -webkit-text-size-adjust: auto;
-          -webkit-text-stroke-width: 0px;">Professor in Geometry<span
+          -webkit-text-stroke-width: 0px;">Retired, former Professor in Geometry<span
             class="Apple-converted-space"></span><br>
           <a href="http://www.dima.unige.it/" style="color: rgb(0, 119,
             170); text-decoration: none;">Department of Mathematics</a>,
@@ -129,9 +121,7 @@
         <h4> </h4>
         <a href="file:///Users/rossi/Desktop/simple3/index.html#"></a>
         <div id="menu">
-          <ul>
-            <li> Links </li>
-          </ul>
+
           <font size="+2">Links</font> </div>
         <div id="content"> </div>
         <ul>
