--- a/Curriculum.html
+++ b/Curriculum.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="simple #3, template,
       simpletemplates.org">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Simple Template #3 - simpletemplates.org</title>
+    <title>Curriculum</title>
   </head>
   <body>
     <div id="wrap">
@@ -35,12 +35,6 @@
           <li><a href="Teaching.html">Teaching</a></li>
           <li><a href="#">Contact Us&nbsp; <br>
             </a>
-            <ul>
-              <li><br>
-              </li>
-              <li><br>
-              </li>
-            </ul>
           </li>
         </ul>
       </div>
