--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="simple #3, template,
       simpletemplates.org">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Simple Template #3 - simpletemplates.org</title>
+    <title>Webpage of Maria Evelina Rossi</title>
   </head>
   <body>
     <div id="wrap">
