--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="simple #3, template,
       simpletemplates.org">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Webpage of Maria Evelina Rossi</title>
+    <title>Simple Template #3 - simpletemplates.org</title>
   </head>
   <body>
     <div id="wrap">
@@ -29,12 +29,20 @@
       </div>
       <div id="menu">
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="http://www.dima.unige.it/%7Erossim/index.html">Home</a></li>
           <li><a
-              href="Curriculum.html">Curriculum</a></li>
-          <li><a href="Research.html">Research</a></li>
-          <li><a href="Teaching.html">Teaching</a></li>
-          <li><a href="#">Contact Us <br></a></li>
+              href="http://www.dima.unige.it/%7Erossim/Curriculum.html">Curriculum</a></li>
+          <li><a href="http://www.dima.unige.it/%7Erossim/Research.html">Research</a></li>
+          <li><a href="http://www.dima.unige.it/%7Erossim/Teaching.html">Teaching</a></li>
+          <li><a href="#">Contact Us <br>
+            </a>
+            <ul>
+              <li><br>
+              </li>
+              <li><br>
+              </li>
+            </ul>
+          </li>
         </ul>
       </div>
       <div id="content"> <br>
@@ -57,7 +65,7 @@
           orphans: auto; text-align: -webkit-left; text-indent: 0px;
           text-transform: none; white-space: normal; widows: auto;
           word-spacing: 0px; -webkit-text-size-adjust: auto;
-          -webkit-text-stroke-width: 0px;">Retired, former Professor in Geometry<span
+          -webkit-text-stroke-width: 0px;">Professor in Geometry<span
             class="Apple-converted-space"></span><br>
           <a href="http://www.dima.unige.it/" style="color: rgb(0, 119,
             170); text-decoration: none;">Department of Mathematics</a>,
@@ -121,7 +129,9 @@
         <h4> </h4>
         <a href="file:///Users/rossi/Desktop/simple3/index.html#"></a>
         <div id="menu">
-
+          <ul>
+            <li> Links </li>
+          </ul>
           <font size="+2">Links</font> </div>
         <div id="content"> </div>
         <ul>
