--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           I-16146 Genova, Italy<br>
           <br>
           email:<span class="Apple-converted-space"> </span><a
-            href="mailto:rossim@dima.unige.it" style="color: rgb(0, 119,
+            href="mailto:marilina55.mr@gmail.com" style="color: rgb(0, 119,
             170); text-decoration: none;">rossim(at)dima.unige.it</a><br>
           Room: 948<span class="Apple-converted-space"> </span><br>
           Phone: +39 010 353 6948<span class="Apple-converted-space"><br>
