--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <br>
           email:<span class="Apple-converted-space"> </span><a
             href="mailto:marilina55.mr@gmail.com" style="color: rgb(0, 119,
-            170); text-decoration: none;">rossim(at)dima.unige.it</a><br>
+            170); text-decoration: none;">marilina55.mr(at)gmail.com</a><br>
           Room: 948<span class="Apple-converted-space"> </span><br>
           Phone: +39 010 353 6948<span class="Apple-converted-space"><br>
           </span></p>
