--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           orphans: auto; text-align: -webkit-left; text-indent: 0px;
           text-transform: none; white-space: normal; widows: auto;
           word-spacing: 0px; -webkit-text-size-adjust: auto;
-          -webkit-text-stroke-width: 0px;">Professor in Geometry<span
+          -webkit-text-stroke-width: 0px;">Former Professor in Geometry<span
             class="Apple-converted-space"></span><br>
           <a href="http://www.dima.unige.it/" style="color: rgb(0, 119,
             170); text-decoration: none;">Department of Mathematics</a>,
