--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           orphans: auto; text-align: -webkit-left; text-indent: 0px;
           text-transform: none; white-space: normal; widows: auto;
           word-spacing: 0px; -webkit-text-size-adjust: auto;
-          -webkit-text-stroke-width: 0px;">Department of Mathematicsaaaaa<br>
+          -webkit-text-stroke-width: 0px;">Department of Mathematics<br>
           University of Genova<br>
           via Dodecaneso, 35<br>
           I-16146 Genova, Italy<br>
