--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div id="content"> </div>
         <ul>
           <li><font face="Arial" size="-1"><a
-                href="http://commalge.tumblr.com/">Commutative Algebra
+                href="https://sites.google.com/view/ag-genova/home">Commutative Algebra
                 in Genova</a>. Here you find the activities of the
               commutative algebra group of Genova<font color="#000099">
                 <font color="#000000">and</font> </font>the upcoming<span
