--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
           email:<span class="Apple-converted-space"> </span><a
             href="mailto:marilina55.mr@gmail.com" style="color: rgb(0, 119,
             170); text-decoration: none;">marilina55.mr(at)gmail.com</a><br>
-          Room: 948<span class="Apple-converted-space"> </span><br>
-          Phone: +39 010 353 6948<span class="Apple-converted-space"><br>
+          Room: 836<span class="Apple-converted-space"> </span><br>
+          <span class="Apple-converted-space"><br>
           </span></p>
         <p style="margin: 0px; font-style: normal; font-variant-caps:
           normal; font-weight: normal; font-size: 12px; line-height:
