--- a/Curriculum.html
+++ b/Curriculum.html
@@ -97,7 +97,7 @@
             style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
             lang="EN-US">Full Professor of Geometry, University of Genoa<span
               style="mso-spacerun:yes">&nbsp; </span>1999 -
-            present&nbsp;</span></font><font size="-1"><span
+          2023 &nbsp;</span></font><font size="-1"><span
             style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
             lang="EN-US"><br>
             Associate Professor of Algebra, University of Genoa 1988 -
@@ -173,7 +173,11 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 </font></span></p>
             <font size="-2"> </font></div>
           <font size="-2"> </font></div>
-        <font size="-2"> <font face="Helvetica"><span style="font-size:
+	  <font size="-2">
+	  <font face="Helvetica"><span style="font-size: 10pt;"></span><span
+              style="font-size: 10pt;"></span><span style="font-size:
+              10pt;">Progetto CARIGE (Commutative Algebra), 2013</span></font><br>
+	  <font face="Helvetica"><span style="font-size:
               10pt;">PRA (Progetto di Ateneo 2017)<br>
               FRA (Fondi di Ricerca di Ateneo 2016)</span></font><br>
           <font face="Helvetica"><span style="font-size: 10pt;"></span><span
