--- a/Curriculum.html
+++ b/Curriculum.html
@@ -176,10 +176,11 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
 	  <font size="-2">
 	  <font face="Helvetica"><span style="font-size: 10pt;"></span><span
               style="font-size: 10pt;"></span><span style="font-size:
-              10pt;">Progetto CARIGE (Commutative Algebra), 2013</span></font><br>
+              10pt;">Contributo BIPE 2018-2020 (incentivazione europea
+	  Mission 1 "Promoting Competitiveness"</span></font><br>
 	  <font face="Helvetica"><span style="font-size:
               10pt;">PRA (Progetto di Ateneo 2017)<br>
-              FRA (Fondi di Ricerca di Ateneo 2016)</span></font><br>
+              FRA (Fondi di Ricerca di Ateneo 2016, 2017,2018, 2019)</span></font><br>
           <font face="Helvetica"><span style="font-size: 10pt;"></span><span
               style="font-size: 10pt;">PRIN 2015 EYPTSB-008 </span><span
               style="font-size: 10pt;">Geometry of Algebraic Varieties</span><span
