--- a/Curriculum.html
+++ b/Curriculum.html
@@ -174,10 +174,12 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
             <font size="-2"> </font></div>
           <font size="-2"> </font></div>
 	  <font size="-2">
+	   <font face="Helvetica"><span style="font-size:
+              10pt;">PRIN 2020 2020355B8Y Squarefree Groebner degenerations, special varieties and related topics <br>
 	  <font face="Helvetica"><span style="font-size: 10pt;"></span><span
               style="font-size: 10pt;"></span><span style="font-size:
               10pt;">Contributo BIPE 2018-2020 (incentivazione europea
-	  Mission 1 "Promoting Competitiveness"</span></font><br>
+	  Mission 1 "Promoting Competitiveness")</span></font><br>
 	  <font face="Helvetica"><span style="font-size:
               10pt;">PRA (Progetto di Ateneo 2017)<br>
               FRA (Fondi di Ricerca di Ateneo 2016, 2017,2018, 2019)</span></font><br>
