--- a/Curriculum.html
+++ b/Curriculum.html
@@ -238,7 +238,13 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
               style="font-size:10.0pt;font-family:Helvetica;
               mso-no-proof:no" lang="EN-US">Services:<br>
             </span></b></p>
-        <ul>
+	<ul>
+	   <li><span style="mso-bidi-font-weight: normal"><span
+                style="font-size:10.0pt;font-family:Helvetica;
+                mso-no-proof:no" lang="EN-US">Member of the PhD Council in "Matematica e Applicazioni"  of the Department of Matematica of Genoa, 2013-2024.</span></span></li>
+	   <li><span style="mso-bidi-font-weight: normal"><span
+                style="font-size:10.0pt;font-family:Helvetica;
+                mso-no-proof:no" lang="EN-US">Member of Giunta and Commissione Programmazione DIMA,&nbsp; 2015-2018.</span></span></li>
           <li><span style="mso-bidi-font-weight: normal"><span
                 style="font-size:10.0pt;font-family:Helvetica;
                 mso-no-proof:no" lang="EN-US">Member of Scientific
