--- a/Curriculum.html
+++ b/Curriculum.html
@@ -374,7 +374,25 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
         <div class="clear">
           <p> </p>
         </div>
-        <ul>
+	<ul>
+	  <li>&nbsp;<font face="Helvetica" size="-1">Organizer with
+	  A. Seceleanu, C. Berkesch, L. Fouli
+	  of Connections Workshop: Commutative Algebra, MSRI, January 18-20, 2024</font></li>
+	  <li>&nbsp;<font face="Helvetica" size="-1">Organizer with
+	  Viet Ngo Trung  ,  Jugal Verma,
+	  Local Organiser: Lothar Goettsche (ICTP), School and
+	  Workshop on Commutative Algebra and
+	  Algebraic Geometry in Prime Characteristics  (smr 3866), 2023</font></li>
+	  <li>&nbsp;<font face="Helvetica" size="-1">Organizer with
+	  N.V. Trung and J. Verma, ICTP for
+	  the Online Graduate Course on Tight Closure of Ideals and
+	  its Applications
+	  (May-July 2022).</font></li>
+	  <li>&nbsp;<font face="Helvetica" size="-1">Organizer with
+              A. Iarrobino, P. M. Marques, J. Valles, AMS-SMF-EMS
+              Joint Internat. Meeting. Special Section: Deformation of
+	  Artinian algebras and Jordan type,
+	  Grenoble, July 2022</font></li>
           <li>&nbsp;<font face="Helvetica" size="-1">Organizer with
               Slawomir Rams, Alessandra Sarti and Tomasz Szemberg of the
               special session: Projective Varieties and their
