--- a/Curriculum.html
+++ b/Curriculum.html
@@ -498,7 +498,7 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
             </font></li>
           <li><font size="-1">Laura Tozzo&nbsp; 2017<br>
             </font></li>
-          <li><font size="-1">Van Duc Trung (present)</font><br>
+          <li><font size="-1">Van Duc Trung, 2023 </font><br>
           </li>
         </ul>
         <font size="-1"><br>
@@ -554,7 +554,13 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
 
 
               </b></font></font><br>
-          -&nbsp; </font><font size="-1"><font size="-1">Mathematical
+	-&nbsp; </font><font size="-1"><font size="-1">
+	ICTP International Center for Theoretical Physics, Trieste
+	(Italy) 2024 <br>
+	Mathematical Research Institute of Oberwolfach, Germany,
+	February 2023 <br>
+	Centre International de Rencontres Mathematiques (CIRM), Luminy (France), January 2023<br>
+         Mathematical
             Research Institute of Oberwolfach, Germany, February 2019<br>
           </font>&nbsp;- Banff Internatinal Research Station for
           Mathematical Innovation and Discovery (Canada): June 2018<br>
