--- a/Curriculum.html
+++ b/Curriculum.html
@@ -555,12 +555,12 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
 
               </b></font></font><br>
 	-&nbsp; </font><font size="-1"><font size="-1">
-	ICTP International Center for Theoretical Physics, Trieste
+	- ICTP International Center for Theoretical Physics, Trieste
 	(Italy) 2024 <br>
-	Mathematical Research Institute of Oberwolfach, Germany,
+	- Mathematical Research Institute of Oberwolfach, Germany,
 	February 2023 <br>
-	Centre International de Rencontres Mathematiques (CIRM), Luminy (France), January 2023<br>
-         Mathematical
+	- Centre International de Rencontres Mathematiques (CIRM), Luminy (France), January 2023<br>
+        - Mathematical
             Research Institute of Oberwolfach, Germany, February 2019<br>
           </font>&nbsp;- Banff Internatinal Research Station for
           Mathematical Innovation and Discovery (Canada): June 2018<br>
@@ -629,7 +629,7 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
 
 
 
-            </b>About 60</font> pubblications in relevant international
+            </b>About 65</font> pubblications in relevant international
           journals: Advances in Math., Compositio Math., Trans. Amer.
           Math. Soc., Journal of Algebra, Nagoya Math. J., Math.
           Zeitschrift, Proc. London Math. Soc., Proc. Amer. Math. Soc.,
@@ -645,7 +645,36 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
               lang="EN-US">:&nbsp; </span><font face="Helvetica"
               size="-1">&nbsp; <br>
             </font></span></p>
-        <ul>
+	<ul>
+	   <li><span style="font-size: 12.000000pt; font-family:
+              'CMBX12'"><font face="Helvetica" size="-1">Gorenstein
+                k-akgebras, Banff, July 2018</font></span><br>
+            <span style="font-size: 12.000000pt; font-family: 'CMBX12'"></span><span
+              style="font-size: 12.000000pt; font-family:
+	  'CMBX12'"></span></li>
+	   <li><span style="font-size: 12.000000pt; font-family:
+              'CMBX12'"><font face="Helvetica" size="-1">Gorenstein
+                k-akgebras, Banff, July 2018</font></span><br>
+            <span style="font-size: 12.000000pt; font-family: 'CMBX12'"></span><span
+              style="font-size: 12.000000pt; font-family:
+	  'CMBX12'"></span></li>
+	   <li><span style="font-size: 12.000000pt; font-family:
+              'CMBX12'"><font face="Helvetica" size="-1">Gorenstein
+                k-akgebras, Banff, July 2018</font></span><br>
+            <span style="font-size: 12.000000pt; font-family: 'CMBX12'"></span><span
+              style="font-size: 12.000000pt; font-family:
+	  'CMBX12'"></span></li>
+	   <li><span style="font-size: 12.000000pt; font-family:
+              'CMBX12'"><font face="Helvetica" size="-1">Gorenstein
+                k-akgebras, Banff, July 2018</font></span><br>
+            <span style="font-size: 12.000000pt; font-family: 'CMBX12'"></span><span
+              style="font-size: 12.000000pt; font-family:
+	  'CMBX12'"></span></li>
+	   <li><span style="font-size: 12.000000pt; font-family:
+              'CMBX12'"><font face="Helvetica" size="-1">Gorenstein
+                k-akgebras, Banff, July 2018</font></span><br>
+            <span style="font-size: 12.000000pt; font-family: 'CMBX12'"></span><span
+              style="font-size: 12.000000pt; font-family: 'CMBX12'"></span></li>
           <li><span style="font-size: 12.000000pt; font-family:
               'CMBX12'"><font face="Helvetica" size="-1">Gorenstein
                 k-akgebras, Banff, July 2018</font></span><br>
