--- a/Curriculum.html
+++ b/Curriculum.html
@@ -647,32 +647,35 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
             </font></span></p>
 	<ul>
 	   <li><span style="font-size: 12.000000pt; font-family:
-              'CMBX12'"><font face="Helvetica" size="-1">Gorenstein
-                k-akgebras, Banff, July 2018</font></span><br>
+              'CMBX12'"><font face="Helvetica" size="-1">Results and
+          problems passing from local rings to the associated graded
+          ring, Osaka, September 2024</font></span><br>
             <span style="font-size: 12.000000pt; font-family: 'CMBX12'"></span><span
               style="font-size: 12.000000pt; font-family:
 	  'CMBX12'"></span></li>
 	   <li><span style="font-size: 12.000000pt; font-family:
-              'CMBX12'"><font face="Helvetica" size="-1">Gorenstein
-                k-akgebras, Banff, July 2018</font></span><br>
+              'CMBX12'"><font face="Helvetica" size="-1">The rate of
+	  Gorenstein $k$-algebras,
+	  Hanoi (Vietnam), June 2023</font></span><br>
             <span style="font-size: 12.000000pt; font-family: 'CMBX12'"></span><span
               style="font-size: 12.000000pt; font-family:
 	  'CMBX12'"></span></li>
 	   <li><span style="font-size: 12.000000pt; font-family:
-              'CMBX12'"><font face="Helvetica" size="-1">Gorenstein
-                k-akgebras, Banff, July 2018</font></span><br>
+              'CMBX12'"><font face="Helvetica" size="-1">The
+	  rationality of the Poincare' Series,
+	  Luminy (France), January 2023</font></span><br>
             <span style="font-size: 12.000000pt; font-family: 'CMBX12'"></span><span
               style="font-size: 12.000000pt; font-family:
 	  'CMBX12'"></span></li>
 	   <li><span style="font-size: 12.000000pt; font-family:
-              'CMBX12'"><font face="Helvetica" size="-1">Gorenstein
-                k-akgebras, Banff, July 2018</font></span><br>
+              'CMBX12'"><font face="Helvetica" size="-1">A
+	  construction og Gorenstein $k$-algebras,
+	  IIT Bombay (online), 2020</font></span><br>
             <span style="font-size: 12.000000pt; font-family: 'CMBX12'"></span><span
               style="font-size: 12.000000pt; font-family:
 	  'CMBX12'"></span></li>
 	   <li><span style="font-size: 12.000000pt; font-family:
-              'CMBX12'"><font face="Helvetica" size="-1">Gorenstein
-                k-akgebras, Banff, July 2018</font></span><br>
+              'CMBX12'"><font face="Helvetica" size="-1">Castelnuovo-Mumford regularity of the tangent cone, Notre Dame (USA), July 2018</font></span><br>
             <span style="font-size: 12.000000pt; font-family: 'CMBX12'"></span><span
               style="font-size: 12.000000pt; font-family: 'CMBX12'"></span></li>
           <li><span style="font-size: 12.000000pt; font-family:
