--- a/Curriculum.html
+++ b/Curriculum.html
@@ -648,14 +648,14 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
 	<ul>
 	   <li><span style="font-size: 12.000000pt; font-family:
               'CMBX12'"><font face="Helvetica" size="-1">Results and
-          problems passing from local rings to the associated graded
-          ring, Osaka, September 2024</font></span><br>
+          problems passing from a local ring to its associated graded
+          ring, Osaka (Japan), September 2024</font></span><br>
             <span style="font-size: 12.000000pt; font-family: 'CMBX12'"></span><span
               style="font-size: 12.000000pt; font-family:
 	  'CMBX12'"></span></li>
 	   <li><span style="font-size: 12.000000pt; font-family:
               'CMBX12'"><font face="Helvetica" size="-1">The rate of
-	  Gorenstein $k$-algebras,
+	  Gorenstein k-algebras,
 	  Hanoi (Vietnam), June 2023</font></span><br>
             <span style="font-size: 12.000000pt; font-family: 'CMBX12'"></span><span
               style="font-size: 12.000000pt; font-family:
