--- a/Curriculum.html
+++ b/Curriculum.html
@@ -669,7 +669,7 @@ style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
 	  'CMBX12'"></span></li>
 	   <li><span style="font-size: 12.000000pt; font-family:
               'CMBX12'"><font face="Helvetica" size="-1">A
-	  construction og Gorenstein $k$-algebras,
+	  construction og Gorenstein k-algebras,
 	  IIT Bombay (online), 2020</font></span><br>
             <span style="font-size: 12.000000pt; font-family: 'CMBX12'"></span><span
               style="font-size: 12.000000pt; font-family:
