--- a/Research.html
+++ b/Research.html
@@ -40,7 +40,49 @@
             </a>
             <ul>
               <li><br>
-              </li>
+	      </li>
+            <li><a
+                  href="file:///Users/rossi/Desktop/simple3/index.html#">Co<font
+                    size="-1"><span
+                      style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
+                      lang="EN-US">S. K. Masuti, K. Ozeki, M.E.
+                      Rossi,&nbsp;</span></font><font size="-1"><span
+                      style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
+                      lang="EN-US"> </span></font></a><font size="-1"><a
+                    href="https://arxiv.org/pdf/1711.06868.pdf">A
+                    filtration of the Sally module and the first normal
+                    Hilbert coefficient</a><a>,</a> Journal
+                  .2018.06.025, <br>
+                </font></li>
+
+              <li><a
+                  href="file:///Users/rossi/Desktop/simple3/index.html#">Co<font
+                    size="-1"><span
+                      style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
+                      lang="EN-US">S. K. Masuti, K. Ozeki, M.E.
+                      Rossi,&nbsp;</span></font><font size="-1"><span
+                      style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
+                      lang="EN-US"> </span></font></a><font size="-1"><a
+                    href="https://arxiv.org/pdf/1711.06868.pdf">A
+                    filtration of the Sally module and the first normal
+                    Hilbert coefficient</a><a>,</a> Journal
+                  .2018.06.025, <br>
+                </font></li>
+
+
+	      <li><a
+                  href="file:///Users/rossi/Desktop/simple3/index.html#">Co<font
+                    size="-1"><span
+                      style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
+                      lang="EN-US">S. K. Masuti, K. Ozeki, M.E.
+                      Rossi,&nbsp;</span></font><font size="-1"><span
+                      style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
+                      lang="EN-US"> </span></font></a><font size="-1"><a
+                    href="https://arxiv.org/pdf/1711.06868.pdf">A
+                    filtration of the Sally module and the first normal
+                    Hilbert coefficient</a><a>,</a> Journal
+                  .2018.06.025, <br>
+                </font></li>
               <li><a
                   href="file:///Users/rossi/Desktop/simple3/index.html#">Co<font
                     size="-1"><span
@@ -75,8 +117,7 @@
                 lang="EN-US"> <a
                   href="publications/Gorenstein.1-dim.pdf">A
                   constructive approach to one-dimensional Gorenstein
-                  k-algebras,</a><a> </a>Trans. A.M.S. (to appear),
-                2020<br>
+                  k-algebras,</a><a> </a>Trans. Amer. Math. Soc. 374 (2021), no. 7, 4953-4971.  <br>
               </span></font></li>
           <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
@@ -89,8 +130,9 @@
                       href="file:///Volumes/zhome/rossim/Sites/publications/ORWY_11.20.pdf">Normal
 
                       Hilbert coefficients and elliptic ideals in normal
-                      2-dimensional local domains,</a>&nbsp; (preprint),
-                    2020.</span></font> </span></font> </li>
+                      2-dimensional local domains,</a>&nbsp; Nagoya
+	      Math. J. (2022), DOI 10.1017/nmj.2022.5
+              </span></font> </span></font> </li>
           <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"><font size="-1"><span
@@ -99,8 +141,7 @@
                     Rossi, Maria Evelina; <a
                       href="https://arxiv.org/pdf/1711.06868.pdf">A
                       filtration of the Sally module and the first
-                      normal Hilbert coefficient</a>, J. of Algebra
-                    (will appear), in honor of C. Huneke. <br>
+                      normal Hilbert coefficient</a>,  J. Algebra 571 (2021), 376-392, in honor of C. Huneke. <br>
                   </span></font></span></font></li>
           <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
