--- a/Research.html
+++ b/Research.html
@@ -58,15 +58,29 @@
             style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
             lang="EN-US"> </span></font>
 	<ul>
+
 	   <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                lang="EN-US">J. Elias,&nbsp; M.E. Rossi,&nbsp;</span></font><font
+                lang="EN-US">   A. De Stefani,&nbsp; M.E. Rossi,&nbsp;
+                M. Varbaro &nbsp;</span></font><font
               size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"> <a
-                  href="publications/Gorenstein.1-dim.pdf">A
-                  constructive approach to one-dimensional Gorenstein
-                  k-algebras,</a><a> </a>Trans. Amer. Math. Soc. 374 (2021), no. 7, 4953-4971.  <br>
+                  href="publications/Gorenstein.1-dim.pdf"> 
+               </a><a> </a> From a local ring to its associated graded
+                algebra (preprint)  <br>
+	  </span></font></li>
+
+	  
+	   <li><font size="-1"><span
+                style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
+                lang="EN-US"> E. De Negri, &nbsp; A. De Stefani,&nbsp; M.E. Rossi,&nbsp;</span></font><font
+              size="-1"><span
+                style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
+                lang="EN-US"> <a
+                  href="publications/Gorenstein.1-dim.pdf">On the rate
+          of generic Gorenstein k-algebras,
+               </a><a> </a> (preprint)  <br>
 	  </span></font></li>
 
 	   <li><font size="-1"><span
