--- a/Research.html
+++ b/Research.html
@@ -127,7 +127,7 @@
               size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"> <a
-                  href="publications/Gorenstein.1-dim.pdf">A
+                >A
                   constructive approach to one-dimensional Gorenstein
                   k-algebras,</a><a> </a>Trans. Amer. Math. Soc. 374 (2021), no. 7, 4953-4971.  <br>
               </span></font></li>
@@ -139,7 +139,7 @@
                   size="-1"><span
                     style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                     lang="EN-US">K. Watanabe, K. Yoshida,&nbsp; <a
-                      href="file:///Volumes/zhome/rossim/Sites/publications/ORWY_11.20.pdf">Normal
+                  href="https://arxiv.org/pdf/2012.05530.pdf">Normal
 
                       Hilbert coefficients and elliptic ideals in normal
                       2-dimensional local domains,</a>&nbsp; Nagoya
