--- a/Research.html
+++ b/Research.html
@@ -66,7 +66,7 @@
               size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"> <a
-                  href="publications/Gorenstein.1-dim.pdf"> 
+                  href="https://arxiv.org/pdf/2406.16421.pdf"> 
                </a><a> </a> From a local ring to its associated graded
                 algebra (preprint)  <br>
 	  </span></font></li>
