--- a/Research.html
+++ b/Research.html
@@ -62,7 +62,7 @@
 	   <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US">   A. De Stefani,&nbsp; M.E. Rossi,&nbsp;
-                M. Varbaro &nbsp;</span></font><font
+                M. Varbaro, &nbsp;</span></font><font
               size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"> <a
