--- a/Research.html
+++ b/Research.html
@@ -62,7 +62,8 @@
 	   <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US">   A. De Stefani,&nbsp; M.E. Rossi,&nbsp;
-                M. Varbaro, &nbsp;</span></font><font
+                M. Varbaroda,&nbsp; <a
+                  href="https://arxiv.org/pdf/2406.16421.pdf">;</span></font><font
               size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"> <a
