--- a/Research.html
+++ b/Research.html
@@ -61,6 +61,21 @@
 
 	   <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
+                lang="EN-US"><font size="-1"><span
+                    style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
+                    lang="EN-US">A. De Stefani, M.E. Rossi, </span></font><font
+                  size="-1"><span
+                    style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
+                    lang="EN-US"> M. Varbaro,&nbsp; <a
+                  href="https://arxiv.org/pdf/2406.16421.pdf">Normal
+
+                      Hilbert coefficients and elliptic ideals in normal
+                      2-dimensional local domains,</a>&nbsp; From a local ring to its associated graded
+                algebra (preprint), 2024.
+              </span></font> </span></font> </li>
+
+	   <li><font size="-1"><span
+                style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US">   A. De Stefani,&nbsp; M.E. Rossi,&nbsp;
                 M. Varbaroda,&nbsp; <a
                   href="https://arxiv.org/pdf/2406.16421.pdf">;</span></font><font
@@ -131,7 +146,8 @@
                 >A
                   constructive approach to one-dimensional Gorenstein
                   k-algebras,</a><a> </a>Trans. Amer. Math. Soc. 374 (2021), no. 7, 4953-4971.  <br>
-              </span></font></li>
+	  </span></font></li>
+	  
           <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"><font size="-1"><span
