--- a/Research.html
+++ b/Research.html
@@ -67,11 +67,8 @@
                   size="-1"><span
                     style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                     lang="EN-US"> M. Varbaro,&nbsp; <a
-                  href="https://arxiv.org/pdf/2406.16421.pdf">Normal
-
-                      Hilbert coefficients and elliptic ideals in normal
-                      2-dimensional local domains,</a>&nbsp; From a local ring to its associated graded
-                algebra (preprint), 2024.
+                  href="https://arxiv.org/pdf/2406.16421.pdf"> From a local ring to its associated graded
+                algebra (preprint), 2024,</a>&nbsp; 
               </span></font> </span></font> </li>
 
 	   <li><font size="-1"><span
