--- a/Research.html
+++ b/Research.html
@@ -68,7 +68,7 @@
                     style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                     lang="EN-US"> M. Varbaro,&nbsp; <a
                   href="https://arxiv.org/pdf/2406.16421.pdf"> From a local ring to its associated graded
-                algebra (preprint), 2024,</a>&nbsp; 
+                algebra,</a>&nbsp;  (preprint), 2024
               </span></font> </span></font> </li>
 
 	   <li><font size="-1"><span
