--- a/Research.html
+++ b/Research.html
@@ -69,20 +69,19 @@
                     lang="EN-US"> M. Varbaro,&nbsp; <a
                   href="https://arxiv.org/pdf/2406.16421.pdf"> From a local ring to its associated graded
                 algebra,</a>&nbsp;  (preprint), 2024
-              </span></font> </span></font> </li>
+	  </span></font> </span></font> </li>
 
-	   <li><font size="-1"><span
+	  <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                lang="EN-US">   A. De Stefani,&nbsp; M.E. Rossi,&nbsp;
-                M. Varbaroda,&nbsp; <a
-                  href="https://arxiv.org/pdf/2406.16421.pdf">;</span></font><font
-              size="-1"><span
-                style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                lang="EN-US"> <a
-                  href="https://arxiv.org/pdf/2406.16421.pdf"> 
-               </a><a> </a> From a local ring to its associated graded
-                algebra (preprint)  <br>
-	  </span></font></li>
+                lang="EN-US"><font size="-1"><span
+                    style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
+                    lang="EN-US">E. De Negri, &nbsp; A. De Stefani </span></font><font
+                  size="-1"><span
+                    style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
+	  lang="EN-US"> M.E. Rossi,&nbsp; <a
+                  href="https://arxiv.org/pdf/2304.14842.pdf"> On the rate
+          of generic Gorenstein k-algebras,</a>&nbsp;  (preprint), 2024
+              </span></font> </span></font> </li> 
 
 	  
 	   <li><font size="-1"><span
@@ -91,10 +90,10 @@
               size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"> <a
-                  href="publications/Gorenstein.1-dim.pdf">On the rate
+                  href="https://arxiv.org/pdf/2304.14842.pdf>On the rate
           of generic Gorenstein k-algebras,
-               </a><a> </a> (preprint)  <br>
-	  </span></font></li>
+               </a>&nbsp;  (preprint), 2024
+              </span></font> </span></font> </li> 
 
 	   <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
