--- a/Research.html
+++ b/Research.html
@@ -80,31 +80,21 @@
                     style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
 	  lang="EN-US"> M.E. Rossi,&nbsp; <a
                   href="https://arxiv.org/pdf/2304.14842.pdf"> On the rate
-          of generic Gorenstein k-algebras,</a>&nbsp;  (preprint), 2024
+          of generic Gorenstein k-algebras,</a>&nbsp;  (preprint), 2023
+	  </span></font> </span></font> </li>
+
+	   <li><font size="-1"><span
+                style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
+                lang="EN-US"><font size="-1"><span
+                    style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
+                    lang="EN-US">J. Elias,&nbsp; M.E. Rossi </span></font><font
+                  size="-1"><span
+                    style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
+	  lang="EN-US">  <a> Almost
+	  finitely generated inverse systems,</a>&nbsp;  Contemp. Math. (2024)
               </span></font> </span></font> </li> 
 
 	  
-	   <li><font size="-1"><span
-                style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                lang="EN-US"> E. De Negri, &nbsp; A. De Stefani,&nbsp; M.E. Rossi,&nbsp;</span></font><font
-              size="-1"><span
-                style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                lang="EN-US"> <a
-                  href="https://arxiv.org/pdf/2304.14842.pdf>On the rate
-          of generic Gorenstein k-algebras,
-               </a>&nbsp;  (preprint), 2024
-              </span></font> </span></font> </li> 
-
-	   <li><font size="-1"><span
-                style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                lang="EN-US">J. Elias,&nbsp; M.E. Rossi,&nbsp;</span></font><font
-              size="-1"><span
-                style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                lang="EN-US"> <a
-                  href="publications/Gorenstein.1-dim.pdf">Almost
-	  finitely generated inverse systems
-	  and reduced k-algebras,</a><a> </a> Contemp. Math. (2024)   <br>
-	  </span></font></li>
 
 	   <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
