--- a/Research.html
+++ b/Research.html
@@ -101,8 +101,7 @@
                 lang="EN-US">J. Elias,&nbsp; M.E. Rossi,&nbsp;</span></font><font
               size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                lang="EN-US"> <a
-                  href="publications/Gorenstein.1-dim.pdf">The Inverse
+                lang="EN-US"> <a> The Inverse
                 system of Gorenstein Points,</a><a> </a> Israel
                 Journal of Math. (2023)  <br>
 	  </span></font></li>
@@ -112,8 +111,7 @@
                 lang="EN-US">J. Jelisiejew,&nbsp;S. K. Masuti,&nbsp; M.E. Rossi,&nbsp;</span></font><font
               size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                lang="EN-US"> <a
-                  href="publications/Gorenstein.1-dim.pdf">On the
+                lang="EN-US"> <a> On the
 	  Hilbert function of Artinian local
 	  complete intersections of codimension thre,</a><a>
 	  </a>J. Pure Appl. Algebra 227 (2023),
@@ -157,7 +155,9 @@
                       href="https://arxiv.org/pdf/1711.06868.pdf">A
                       filtration of the Sally module and the first
                       normal Hilbert coefficient</a>,  J. Algebra 571 (2021), 376-392, in honor of C. Huneke. <br>
-                  </span></font></span></font></li>
+	      </span></font></span></font></li>
+
+	      
           <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US">Masuti, Shreedevi K.; Ozeki, Kazuho; Rossi,
@@ -166,19 +166,15 @@
                   structure of the Sally module and the second normal
                   Hilbert coefficient,</a> Proc. Amer. Math. Soc. 148
                 (2020), no. 7, 2757–2771.</span></font></li>
-          <li><font size="-1"><span
+
+		<li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                lang="EN-US">S. K. Masuti, M.E. Rossi,&nbsp;</span></font><font
-              size="-1"><span
-                style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                lang="EN-US"> <a href="publications/Masuti-Rossi.pdf">Artinian
-
-
-
-
-                  level algebras of socle degree 4 </a><a>,</a> Journal
-                of Algebra, Vol. 507 (2018), 525-546.<br>
-              </span></font></li>
+                lang="EN-US">S. K. Masuti, M.E. Rossi <a
+                  href="https://arxiv.org/pdf/1701.03180.pdf">  Artinian
+ level algebras of socle degree 4 </a> Journal
+                of Algebra, Vol. 507 (2018), 525-546. 
+		</span></font></li>
+		
           <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US">M.E. Rossi, </span></font><font size="-1"><span
