--- a/Research.html
+++ b/Research.html
@@ -169,11 +169,10 @@
 
 		<li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                lang="EN-US">S. K. Masuti, M.E. Rossi <a
+                lang="EN-US">S. K. Masuti, M.E. Rossi, <a
                   href="https://arxiv.org/pdf/1701.03180.pdf">  Artinian
  level algebras of socle degree 4 </a> Journal
-                of Algebra, Vol. 507 (2018), 525-546. 
-		</span></font></li>
+                of Algebra, Vol. 507 (2018), 525-546.</span></font></li>
 		
           <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
