--- a/Research.html
+++ b/Research.html
@@ -176,24 +176,12 @@
 		
           <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                lang="EN-US">M.E. Rossi, </span></font><font size="-1"><span
-style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                lang="EN-US"><font size="-1"><span
-                    style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                    lang="EN-US">T.D. Dinh, </span></font>N.V.
-                Trung,&nbsp; <a
-                  href="publications/Rossi-Trung-Trung.pdf">Castelnuovo-Mumford
+                lang="EN-US">M.E. Rossi, T.D. Dinh,N.V. Trung  <a
+		href="https://arxiv.org/pdf/1512.04372.pdf"> Castelnuovo-Mumford regularity and Ratliff-Rush closure</a><a>,</a>
+                Journal of Algebra, 504 (2018), 568–586
+		</span></font></li>
 
-
-
-
-
-                  regularity and Ratliff-Rush closure</a><a>,</a>
-                Journal of Algebra, 504 (2018), 568–586,
-                arXiv:1512.04372 [math.AC] </span></font><br>
-            <font size="-1"><span
-                style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                lang="EN-US"></span></font></li>
+		
           <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US">J. Elias, M.E. Rossi, <a
