--- a/Research.html
+++ b/Research.html
@@ -176,8 +176,10 @@
 		
           <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
-                lang="EN-US">M.E. Rossi, T.D. Dinh,N.V. Trung  <a
-		href="https://arxiv.org/pdf/1512.04372.pdf"> Castelnuovo-Mumford regularity and Ratliff-Rush closure</a><a>,</a>
+                lang="EN-US">M.E. Rossi, T.D. Dinh, N.V. Trung,  <a
+		href="https://arxiv.org/pdf/1512.04372.pdf">
+                Castelnuovo-Mumford regularity and Ratliff-Rush
+                closure</a> 
                 Journal of Algebra, 504 (2018), 568–586
 		</span></font></li>
 
