--- a/Research.html
+++ b/Research.html
@@ -187,11 +187,13 @@
           <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US">J. Elias, M.E. Rossi, <a
-                  href="publications/GorensteinAdvances.pdf">The
+                 	href="https://arxiv.org/pdf/1705.05686.pdf">The
                   structure of the inverse system of Gorenstein
-                  k-algebras</a>,&nbsp;&nbsp; Adv. Math. 314 (2017),
-                306--327&nbsp; <br>
-              </span></font></li>
+                  k-algebras</a> Adv. Math. 314 (2017),
+                306-327
+		</span></font></li>
+
+		
           <li><font size="-1"><span
                 style="font-size:10.0pt;font-family:Helvetica;mso-no-proof:no"
                 lang="EN-US"></span></font><font size="-1"><span
